--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Hello</h1>
-    <p>Just learning how to use git</p>
+    <p>Just learning how to use git still</p>
 </body>
 </html>
